--- a/Frontend/Firebase/Angular/src/app/components/login-form/login-form.component.html
+++ b/Frontend/Firebase/Angular/src/app/components/login-form/login-form.component.html
@@ -6,6 +6,7 @@
   <input formControlName="password" type="password" #password name="password" placeholder="password" required/>
   <button type="submit">Log In</button>
   <ownid [type]="login"
+         [options] = widgetOptions
          (onLogin)="onLogin()"
          [loginIdField]="email"
          [passwordField]="password">
